2005-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXInt.h: Move MODULE_SCOPE defn to tkInt.h and add
	* generic/tkInt.h:      WORDS_BIGENDIAN checks that will work with
	OS X universal binary compiles. (steffen)

	* generic/tkMenu.c (TkSetWindowMenuBar): do not call TkMenuInit if
	the winPtr indicates TK_ALREADY_DEAD.  This prevents reinit that
	creates a Tk exit handler after all exit handlers should be
	called.  [Bug 749908, 1322294]

2005-10-10  Vince Darley <vincentdarley@users.sourceforge.net>

	* doc/text.n
	* generic/tkText.c
	* generic/tkText.h
	* generic/tkTextBTree.c
	* generic/tkTextDisp.c
	* generic/tkTextImage.c
	* generic/tkTextIndex.c
	* generic/tkTextMark.c
	* generic/tkTextTag.c
	* generic/tkTextWind.c
	* macosx/tkMacOSXDefault.h
	* tests/text.test
	* tests/textDisp.test
	* unix/tkUnixDefault.h
	* win/tkWinDefault.h: Implementation of TIP#256, adding a new
	text widget configuration option '-tabstyle', with new tests
	and documentation.

	Also a fix for [Bug 1281228] (documentation and full implementation
	of -strictlimits), and [Bug 1288677] (corrected elide behaviour),
	again with more tests.

2005-10-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/dialog.tcl (::tk_dialog): add tkwait visibility before
	grab. [Bug 1216775]

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): reset stored
	path to "" if it doesn't exist and -mustexist is true. [Bug 1309218]
	Remove old-style dir chooser (no longer used).

	* macosx/tkMacOSXInt.h: add MODULE_SCOPE definition check for
	extension writers that access private headers on OS X and don't
	define it in configure.

2005-09-28  Don Porter	<dgp@users.sourceforge.net>

	* unix/tkUnixPort.h:	Disabled inclusion of the private Tcl header
	* win/tkWinPort.h:	file tclInt.h.  Tk ought to have a tiny and
	shrinking number of calls of private Tcl routines.  Each Tk source
	file doing this should follow the convention in the macosx port and
	have its own #include "tclInt.h".
