@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkConfig.c,v 1.20 2005/08/10 22:02:22 dkf Exp $
+ * RCS: @(#) $Id: tkConfig.c,v 1.21 2005/10/10 21:21:00 hobbs Exp $
  */
 
 /*
@@ -222,7 +222,7 @@ Tk_CreateOptionTable(interp, templatePtr)
 	numOptions++;
     }
     tablePtr = (OptionTable *) (ckalloc(sizeof(OptionTable)
-	    + ((numOptions - 1)  * sizeof(Option))));
+	    + (numOptions * sizeof(Option))));
     tablePtr->refCount = 1;
     tablePtr->hashEntryPtr = hashEntryPtr;
     tablePtr->nextPtr = NULL;
@@ -347,7 +347,7 @@ Tk_DeleteOptionTable(optionTable)
 	Tk_DeleteOptionTable((Tk_OptionTable) tablePtr->nextPtr);
     }
 
-    for (count = tablePtr->numOptions - 1, optionPtr = tablePtr->options;
+    for (count = tablePtr->numOptions, optionPtr = tablePtr->options;
 	    count > 0;  count--, optionPtr++) {
 	if (optionPtr->defaultPtr != NULL) {
 	    Tcl_DecrRefCount(optionPtr->defaultPtr);
