@@ -1,5 +1,8 @@
 2005-10-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkConfig.c (Tk_DeleteOptionTable, Tk_CreateOptionTable):
+	properly alloc/delete one more option. [Bug 1319720] (melbardis)
+
 	* macosx/tkMacOSXInt.h: Move MODULE_SCOPE defn to tkInt.h and add
 	* generic/tkInt.h:      WORDS_BIGENDIAN checks that will work with
 	OS X universal binary compiles. (steffen)
